# rustauth

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PORTING.md  README.md  RELEASE.md  SECURITY.md  deny.toml  docker-compose.yml  lefthook.yml  openauth-rs---flagged-findings.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
crates/openauth/: CHANGELOG.md  Cargo.toml  README.md
crates/openauth-axum/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-axum/src/: error.rs  lib.rs  options.rs  request.rs  response.rs  router.rs
crates/openauth-axum/tests/: accounts.rs  body_limit.rs  email_password.rs  email_verification.rs  error_contract.rs  http_contract.rs  password.rs  routing.rs  security.rs  security_upstream.rs  session_fields.rs  social.rs  storage_smoke.rs  user_session_lifecycle.rs
crates/openauth-cli/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-cli/src/: app.rs  config.rs  db.rs  diagnostics.rs  env.rs  lib.rs  output.rs  paths.rs  plugins.rs  prompt.rs  schema.rs  secret.rs  telemetry.rs  workspace.rs
crates/openauth-cli/tests/: commands.rs  config.rs  db.rs  docs.rs  doctor.rs  quick_start.rs  regression_gaps.rs  schema_snapshots.rs  secret.rs
crates/openauth-core/: CHANGELOG.md  Cargo.toml  README.md  SERVER_PARITY.md  SQL_ADAPTER_PARITY.md  UPSTREAM.md
crates/openauth-core/src/: api.rs  context.rs  cookies.rs  crypto.rs  env.rs  error.rs  error_codes.rs  lib.rs  options.rs  plugin.rs  rate_limit.rs  session.rs  user.rs  verification.rs
crates/openauth-core/tests/: cookie_store.rs  cookies.rs  crypto_password.rs  crypto_secret_rotation.rs  db_output.rs  db_schema.rs  options.rs  package_reexports.rs  session_cookies.rs  user_store.rs
crates/openauth-deadpool-postgres/: CHANGELOG.md  Cargo.toml  README.md
crates/openauth-deadpool-postgres/examples/: deadpool_postgres.rs
crates/openauth-deadpool-postgres/src/: adapter.rs  config.rs  lib.rs  migration.rs  rate_limit.rs  transaction.rs  tx_guard.rs
crates/openauth-deadpool-postgres/tests/: postgres_adapter.rs
crates/openauth-fred/: CHANGELOG.md  Cargo.toml  PARITY.md  README.md  UPSTREAM.md
crates/openauth-fred/src/: bundle.rs  config.rs  error.rs  lib.rs  script.rs  storage.rs  store.rs
crates/openauth-fred/tests/: config.rs  fred_rate_limit.rs
crates/openauth-i18n/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-i18n/src/: accept_language.rs  cookie.rs  error.rs  lib.rs  locale_state.rs  plugin.rs  response.rs  types.rs
crates/openauth-i18n/tests/: i18n.rs
crates/openauth-oauth/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-oauth-provider/: Cargo.toml  README.md  UPSTREAM.md
crates/openauth-oauth-provider/src/: authorize.rs  client.rs  consent.rs  endpoints.rs  error.rs  lib.rs  mcp.rs  metadata.rs  models.rs  options.rs  schema.rs  token.rs  utils.rs
crates/openauth-oauth-provider/tests/: oauth_provider.rs  upstream_mapping.md
crates/openauth-oauth/src/: lib.rs
crates/openauth-oauth/tests/: oauth2_helpers.rs
crates/openauth-oidc/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-oidc/src/: discovery.rs  flow.rs  lib.rs  options.rs  utils.rs
crates/openauth-oidc/tests/: flow.rs
crates/openauth-passkey/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md  UPSTREAM_PARITY.md
crates/openauth-passkey/src/: challenge.rs  challenge_rate_limit.rs  cookies.rs  lib.rs  openapi.rs  options.rs  response.rs  routes.rs  session.rs  store.rs  webauthn.rs
crates/openauth-passkey/tests/: passkey.rs
crates/openauth-plugins/: CHANGELOG.md  Cargo.toml  README.md  SERVER_PARITY.md  UPSTREAM.md
crates/openauth-plugins/src/: lib.rs  prelude.rs
crates/openauth-plugins/tests/: plugins.rs
crates/openauth-redis/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-redis/src/: lib.rs  secondary.rs
crates/openauth-redis/tests/: redis_rate_limit.rs
crates/openauth-saml/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-saml/src/: bridge.rs  lib.rs  options.rs
crates/openauth-saml/tests/: security.rs
crates/openauth-scim/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-scim/docs/: better-auth-design-differences.md
crates/openauth-scim/src/: audit.rs  errors.rs  filters.rs  lib.rs  mappings.rs  metadata.rs  options.rs  patch.rs  resources.rs  routes.rs  schema.rs  store.rs  validation.rs
crates/openauth-scim/tests/: scim.rs
crates/openauth-social-providers/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-social-providers/src/: apple.rs  atlassian.rs  cognito.rs  config.rs  discord.rs  dropbox.rs  (+32 more)
crates/openauth-sqlx/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md  UPSTREAM_PARITY.md
crates/openauth-sso/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-stripe/: .env.smoke.example  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SMOKE.md  UPSTREAM.md
crates/openauth-telemetry/: CHANGELOG.md  Cargo.toml  PARITY.md  README.md  UPSTREAM.md
crates/openauth-tokio-postgres/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM_PARITY.md
crates/rustauth-actix-web/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/rustauth-axum/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/rustauth-cli/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/rustauth-core/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/rustauth-deadpool-postgres/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/rustauth-diesel/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/rustauth-fred/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
examples/: Cargo.toml
examples/actix-web-minimal/: Cargo.toml  README.md
examples/backend-reference/: .env.example  Cargo.toml  README.md  docker-compose.yml  openauth.toml  rustauth.toml
examples/cli-migrate-playground/: .env.example  .gitignore  README.md  rustauth.toml
examples/full-app/: Cargo.toml  README.md  docker-compose.yml
examples/stripe-smoke-server/: Cargo.toml
(+2594 files in other folders)
