[workspace]
resolver = "2"
members = [
    "crates/openauth",
    "crates/openauth-core",
    "crates/openauth-i18n",
    "crates/openauth-oauth",
    "crates/openauth-oauth-provider",
    "crates/openauth-plugins",
    "crates/openauth-scim",
    "crates/openauth-sqlx",
    "crates/openauth-social-providers",
    "crates/openauth-sso",
    "crates/openauth-stripe",
    "crates/openauth-telemetry",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/sebastiansala/openauth"
homepage = "https://github.com/sebastiansala/openauth"
documentation = "https://docs.rs/openauth"
readme = "README.md"
keywords = ["auth", "oauth", "sso", "scim", "identity"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
hmac = "0.12"
http = "1"
indexmap = { version = "2", features = ["serde"] }
josekit = "0.10"
hkdf = "0.12"
data-encoding = "2"
openauth-core = { path = "crates/openauth-core", version = "0.0.2" }
openauth-oauth = { path = "crates/openauth-oauth", version = "0.0.2" }
openauth-plugins = { path = "crates/openauth-plugins", version = "0.0.2" }
openauth-social-providers = { path = "crates/openauth-social-providers", version = "0.0.2" }
openauth-telemetry = { path = "crates/openauth-telemetry", version = "0.0.2" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "time", "json"] }
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-normalization = "0.1"
url = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
