[workspace]
resolver = "2"
members = [
    "crates/openauth",
    "crates/openauth-axum",
    "crates/openauth-cli",
    "crates/openauth-core",
    "crates/openauth-i18n",
    "crates/openauth-oidc",
    "crates/openauth-oauth",
    "crates/openauth-oauth-provider",
    "crates/openauth-passkey",
    "crates/openauth-plugins",
    "crates/openauth-fred",
    "crates/openauth-redis",
    "crates/openauth-scim",
    "crates/openauth-sqlx",
    "crates/openauth-social-providers",
    "crates/openauth-saml",
    "crates/openauth-sso",
    "crates/openauth-stripe",
    "crates/openauth-telemetry",
    "crates/openauth-deadpool-postgres",
    "crates/openauth-tokio-postgres",
    "examples/full-app",
    "examples/stripe-smoke-server",
]

[workspace.package]
version = "0.0.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/sebasxsala/openauth-rs"
homepage = "https://github.com/sebasxsala/openauth-rs"
documentation = "https://docs.rs/openauth"
readme = "README.md"
keywords = ["auth", "oauth", "sso", "scim", "identity"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
hmac = "0.12"
http = "1"
governor = { version = "0.10", default-features = false, features = ["std", "dashmap"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["system-config", "tokio"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
http-body-util = "0.1"
indexmap = { version = "2", features = ["serde"] }
josekit = "0.10"
hkdf = "0.12"
data-encoding = "2"
deadpool-postgres = "0.14.1"
openauth-core = { path = "crates/openauth-core", version = "0.0.6", default-features = false }
openauth-i18n = { path = "crates/openauth-i18n", version = "0.0.6" }
openauth-oidc = { path = "crates/openauth-oidc", version = "0.0.6" }
openauth = { path = "crates/openauth", version = "0.0.6" }
axum = "0.8"
camino = { version = "1.1", features = ["serde1"] }
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
inquire = "0.7"
openauth-oauth = { path = "crates/openauth-oauth", version = "0.0.6", default-features = false }
openauth-fred = { path = "crates/openauth-fred", version = "0.0.6" }
openauth-plugins = { path = "crates/openauth-plugins", version = "0.0.6" }
openauth-passkey = { path = "crates/openauth-passkey", version = "0.0.6" }
openauth-redis = { path = "crates/openauth-redis", version = "0.0.6" }
openauth-scim = { path = "crates/openauth-scim", version = "0.0.6" }
openauth-social-providers = { path = "crates/openauth-social-providers", version = "0.0.6" }
openauth-saml = { path = "crates/openauth-saml", version = "0.0.6" }
openauth-sqlx = { path = "crates/openauth-sqlx", version = "0.0.6", default-features = false }
openauth-sso = { path = "crates/openauth-sso", version = "0.0.6" }
openauth-stripe = { path = "crates/openauth-stripe", version = "0.0.6" }
openauth-telemetry = { path = "crates/openauth-telemetry", version = "0.0.6" }
openauth-deadpool-postgres = { path = "crates/openauth-deadpool-postgres", version = "0.0.6" }
openauth-tokio-postgres = { path = "crates/openauth-tokio-postgres", version = "0.0.6" }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
publicsuffix2 = { version = "0.5.2", default-features = false, features = ["std", "idna"] }
quick-xml = "0.37.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_cbor_2 = "0.13"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "time", "json"] }
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
toml_edit = { version = "0.22", features = ["serde"] }
tokio-postgres = { version = "0.7.17", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
unicode-normalization = "0.1"
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
webauthn-rs = { version = "0.5", features = ["conditional-ui", "danger-allow-state-serialisation", "danger-credential-internals"] }
webauthn-rs-core = "=0.5.5"
x509-parser = "0.18"
opensaml = { git = "https://github.com/sebasxsala/opensaml-rs", rev = "d65e77da80e835d91dc6ff830ab6e8bf1f2292bf", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
