[workspace]
resolver = "2"
members = [
    "crates/rustauth",
    "crates/rustauth-actix-web",
    "crates/rustauth-axum",
    "crates/rustauth-cli",
    "crates/rustauth-core",
    "crates/rustauth-deadpool-postgres",
    "crates/rustauth-diesel",
    "crates/rustauth-fred",
    "crates/rustauth-i18n",
    "crates/rustauth-oauth",
    "crates/rustauth-oauth-provider",
    "crates/rustauth-oidc",
    "crates/rustauth-passkey",
    "crates/rustauth-plugins",
    "crates/rustauth-redis",
    "crates/rustauth-saml",
    "crates/rustauth-scim",
    "crates/rustauth-social-providers",
    "crates/rustauth-sqlx",
    "crates/rustauth-sso",
    "crates/rustauth-stripe",
    "crates/rustauth-telemetry",
    "crates/rustauth-tokio-postgres",
    "examples/stripe-smoke-server",
]

default-members = [
    "crates/rustauth-core",
    "crates/rustauth",
    "crates/rustauth-cli",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/salasebas/rustauth"
homepage = "https://github.com/salasebas/rustauth"
documentation = "https://docs.rs/rustauth"
readme = "README.md"
keywords = ["auth", "oauth", "sso", "scim", "identity"]
categories = ["authentication", "web-programming"]

[workspace.dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
hmac = "0.12"
http = "1"
governor = { version = "0.10", default-features = false, features = ["std", "dashmap"] }
hickory-resolver = { version = "0.26.1", default-features = false, features = ["system-config", "tokio"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
http-body-util = "0.1"
indexmap = { version = "2", features = ["serde"] }
josekit = "0.10"
hkdf = "0.12"
data-encoding = "2"
deadpool-postgres = "0.14.1"
rustauth-core = { path = "crates/rustauth-core", version = "0.3.1", default-features = false }
rustauth-i18n = { path = "crates/rustauth-i18n", version = "0.3.1" }
rustauth-oidc = { path = "crates/rustauth-oidc", version = "0.3.1" }
rustauth = { path = "crates/rustauth", version = "0.3.1" }
actix-web = { version = "4.13", default-features = false }
axum = "0.8"
camino = { version = "1.1", features = ["serde1"] }
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
inquire = "0.7"
rustauth-oauth = { path = "crates/rustauth-oauth", version = "0.3.1", default-features = false }
rustauth-oauth-provider = { path = "crates/rustauth-oauth-provider", version = "0.3.1" }
rustauth-fred = { path = "crates/rustauth-fred", version = "0.3.1" }
rustauth-plugins = { path = "crates/rustauth-plugins", version = "0.3.1" }
rustauth-passkey = { path = "crates/rustauth-passkey", version = "0.3.1" }
rustauth-redis = { path = "crates/rustauth-redis", version = "0.3.1" }
rustauth-scim = { path = "crates/rustauth-scim", version = "0.3.1" }
rustauth-social-providers = { path = "crates/rustauth-social-providers", version = "0.3.1" }
rustauth-saml = { path = "crates/rustauth-saml", version = "0.3.1" }
rustauth-sqlx = { path = "crates/rustauth-sqlx", version = "0.3.1", default-features = false }
rustauth-sso = { path = "crates/rustauth-sso", version = "0.3.1", default-features = false }
rustauth-stripe = { path = "crates/rustauth-stripe", version = "0.3.1" }
rustauth-telemetry = { path = "crates/rustauth-telemetry", version = "0.3.1", default-features = false }
rustauth-deadpool-postgres = { path = "crates/rustauth-deadpool-postgres", version = "0.3.1" }
diesel = { version = "2.3", default-features = false }
diesel-async = { version = "0.9", default-features = false }
rustauth-diesel = { path = "crates/rustauth-diesel", version = "0.3.1", default-features = false }
rustauth-tokio-postgres = { path = "crates/rustauth-tokio-postgres", version = "0.3.1" }
rustauth-actix-web = { path = "crates/rustauth-actix-web", version = "0.3.1" }
rustauth-axum = { path = "crates/rustauth-axum", version = "0.3.1" }
rustauth-cli = { path = "crates/rustauth-cli", version = "0.3.1" }
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
publicsuffix2 = { version = "0.5.2", default-features = false, features = ["std", "idna"] }
quick-xml = "0.37.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_cbor_2 = "0.13"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "time", "json"] }
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
toml_edit = { version = "0.22", features = ["serde"] }
tokio-postgres = { version = "0.7.18", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
unicode-normalization = "0.1"
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
webauthn-rs = { version = "0.5", features = ["conditional-ui", "danger-allow-state-serialisation", "danger-credential-internals"] }
webauthn-rs-core = "=0.5.5"
x509-parser = "0.18"
opensaml = { git = "https://github.com/sebasxsala/opensaml-rs", rev = "d65e77da80e835d91dc6ff830ab6e8bf1f2292bf", version = "0.1.0", default-features = false }

[profile.test]
debug = 1

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
