[package]
name = "openauth-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-core"
readme = "../../README.md"
description = "Core types and primitives for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
http.workspace = true
indexmap.workspace = true
josekit.workspace = true
openauth-oauth = { path = "../openauth-oauth", version = "0.0.1" }
openauth-social-providers = { path = "../openauth-social-providers", version = "0.0.1" }
rand.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
unicode-normalization.workspace = true
url.workspace = true

[lints]
workspace = true
