[package]
name = "openauth-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-core"
readme = "README.md"
description = "Core types and primitives for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["jose", "oauth", "social-providers"]
jose = ["dep:josekit"]
oauth = ["dep:openauth-oauth", "openauth-oauth/jose"]
social-providers = ["oauth", "dep:openauth-social-providers"]
test-utils = []

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
hkdf.workspace = true
hmac.workspace = true
http.workspace = true
governor.workspace = true
indexmap.workspace = true
josekit = { workspace = true, optional = true }
openauth-oauth = { workspace = true, default-features = false, optional = true }
openauth-social-providers = { workspace = true, optional = true }
rand.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
unicode-normalization.workspace = true
url.workspace = true

[dev-dependencies]
openauth-core = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
