[package]
name = "openauth-deadpool-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-deadpool-postgres"
readme = "README.md"
description = "deadpool-postgres database adapter for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
deadpool-postgres.workspace = true
openauth-core.workspace = true
openauth-tokio-postgres.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true

[dev-dependencies]
http.workspace = true
indexmap.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
uuid.workspace = true

[lints]
workspace = true
