[package]
name = "openauth-fred"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-fred"
readme = "README.md"
description = "Fred-backed Redis and Valkey integrations for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fred = { version = "10.1", default-features = false, features = ["i-keys", "i-scripts", "sha-1"] }
openauth-core.workspace = true
tokio.workspace = true

[dev-dependencies]
http.workspace = true
openauth.workspace = true
openauth-core = { workspace = true, features = ["test-utils"] }
openauth-redis.workspace = true

[features]
default = []
native-tls = ["fred/enable-native-tls"]
rustls = ["fred/enable-rustls-ring"]

[lints]
workspace = true
