[package]
name = "openauth-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-i18n"
readme = "../../README.md"
description = "Internationalization support for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
http.workspace = true
indexmap.workspace = true
openauth-core = { path = "../openauth-core", version = "0.0.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
openauth-core = { path = "../openauth-core", version = "0.0.1" }
serde_json.workspace = true
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
