[package]
name = "openauth-oauth-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-oauth-provider"
readme = "../../README.md"
description = "OAuth 2.1 and OpenID Connect provider support for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
openauth-core = { path = "../openauth-core", version = "0.0.1" }
thiserror.workspace = true

[lints]
workspace = true
