[package]
name = "openauth-oauth-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-oauth-provider"
readme = "../../README.md"
description = "OAuth 2.1 and OpenID Connect provider support for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
data-encoding.workspace = true
hmac.workspace = true
http.workspace = true
indexmap.workspace = true
josekit.workspace = true
openauth-core.workspace = true
openauth-plugins.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
