[package]
name = "openauth-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-oauth"
readme = "README.md"
description = "OAuth support for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["jose"]
jose = ["dep:josekit"]

[dependencies]
base64.workspace = true
josekit = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
