[package]
name = "openauth-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-plugins"
readme = "../../README.md"
description = "Official OpenAuth plugin modules."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
data-encoding.workspace = true
hmac.workspace = true
http.workspace = true
indexmap.workspace = true
openauth-core.workspace = true
openauth-oauth.workspace = true
openauth-social-providers.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
