[package]
name = "openauth-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-redis"
readme = "README.md"
description = "Redis integrations for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
openauth-core.workspace = true
redis = { version = "0.32", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
tokio.workspace = true

[dev-dependencies]
openauth-core = { workspace = true, features = ["test-utils"] }

[features]
default = []
native-tls = ["redis/tokio-native-tls-comp"]
rustls = ["redis/tokio-rustls-comp"]

[lints]
workspace = true
