[package]
name = "openauth-scim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-scim"
readme = "README.md"
description = "SCIM support for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
test-util = []

[dependencies]
base64.workspace = true
http.workspace = true
indexmap.workspace = true
openauth-core.workspace = true
openauth-plugins.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
openauth-core = { workspace = true, features = ["test-utils"] }
openauth-deadpool-postgres.workspace = true
openauth-plugins.workspace = true
openauth-sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite"] }
openauth-tokio-postgres.workspace = true
sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite"] }

[[test]]
name = "scim"
required-features = ["test-util"]

[lints]
workspace = true
