[package]
name = "openauth-social-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-social-providers"
readme = "README.md"
description = "Social OAuth provider definitions for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
josekit.workspace = true
openauth-oauth = { workspace = true, features = ["jose"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
