[package]
name = "openauth-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-sqlx"
readme = "README.md"
description = "SQLx database adapters for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres", "sqlx/uuid", "uuid"]
mysql = ["sqlx/mysql"]

[dependencies]
indexmap.workspace = true
openauth-core.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
tokio.workspace = true
uuid = { workspace = true, optional = true }

[dev-dependencies]
http.workspace = true
serde_json.workspace = true

[lints]
workspace = true
