[package]
name = "openauth-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-telemetry"
readme = "README.md"
description = "Telemetry support for OpenAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
openauth-core.workspace = true
rand.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[features]
default = ["http"]
http = ["dep:reqwest"]
oauth = ["openauth-core/oauth"]

[dev-dependencies]
http.workspace = true
url.workspace = true

[lints]
workspace = true
