[package]
name = "openauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
description = "Rust authentication toolkit."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
http.workspace = true
openauth-core = { path = "../openauth-core", version = "0.0.1" }
openauth-telemetry = { path = "../openauth-telemetry", version = "0.0.1" }
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
